fix: Delete read time

--- a/_posts/AWS/2021-07-18-about-aws.md
+++ b/_posts/AWS/2021-07-18-about-aws.md
@@ -15,7 +15,7 @@ last_modified_at: 2021-07-18
 
 ## AWS란?
 
-AWS(Amazon Web Service)는 Amazon에서 고객들을 대상으로 제공하는 클라우드 서비스다. 이와 같은 서비스를 제공하는 회사를 CSP(Cloud Service Provider)라고 부른다. 해외에는 Microsoft, Google이 있고 국내에는 네이버, 카카오, SK, 삼성, LG, KT...등이 존재한다.
+AWS(Amazon Web Service)는 Amazon에서 고객들을 대상으로 제공하는 클라우드 서비스다. 이와 같은 서비스를 제공하는 회사를 CSP(Cloud Service Provider)라고 부른다. 해외에는 Microsoft, Google이 있고 국내에는 네이버, 카카오, SK, 삼성, LG, KT 등이 있다.
 
 ## Cloud Service?
 
