fix: Modify tags

--- a/_posts/AWS/2021-07-18-about-aws.md
+++ b/_posts/AWS/2021-07-18-about-aws.md
@@ -4,7 +4,7 @@ title:  "[AWS] Amazon Web Service와 Cloud Service에 대하여"
 categories:
   - AWS
 tags:
-  - [aws, cloud, cloud service]
+  - [Cloud]
 
 toc: true
 toc_sticky: true
