fix: Modify indent

--- a/_posts/AWS/2021-07-18-about-ec2.md
+++ b/_posts/AWS/2021-07-18-about-ec2.md
@@ -4,7 +4,7 @@ title:  "[AWS] EC2(Elastic Compute Cloud) 이해하기"
 categories:
   - AWS
 tags:
-  - [EC2]
+  - [AWS EC2]
 
 toc: true
 toc_sticky: true
@@ -16,6 +16,7 @@ last_modified_at: 2021-07-18
 
 
 > ## AWS EC2?
+
 &nbsp;Amazon Elastic Compute Cloud(Amazon EC2)는 AWS에서 제공하는 가상의 서버 컴퓨터다.
 - On-premise 환경에서의 서버 컴퓨터와 역할이 같다.
 - AWS는 EC2를 Host Machine에 Hypervisor로 가상화 하여 Multitenancy 환경으로 관리한다.
@@ -23,6 +24,7 @@ last_modified_at: 2021-07-18
 - 사용자는 CPU, Memory, OS, Storage와 같은 것들을 직접 선택하여 사용할 수 있다.
 
 > ## EC2 특징
+
 1. On-premise 환경에서 서버를 증설 해야 한다면 컴퓨터를 필요한 만큼 주문하고 도착할 때까지 기다린 후에 설치까지 완료해야 사용이 가능하다. 하지만 EC2는 클릭 몇번으로 바로 사용이 가능하다.
 
 2. EC2는 'pay-as-you-go' 서비스를 제공하기 때문에 On-premise 환경과 달리 증설해야 할 서버의 개수를 예측할 필요가 없다. 즉, 효율적으로 scale in/out을 할 수 있다.
@@ -32,6 +34,7 @@ last_modified_at: 2021-07-18
 4. 사용자들은 EC2를 다양한 목적을 가지고 활용한다. 그래서 AWS는 사용하는 목적에 맞는 EC2의 종류와 가격 측정 옵션을 제공한다.
 
 > ## EC2 종류
+
 사용자는 EC2를 다양한 목적으로 사용할 수 있기 때문에 AWS는 여러 종류의 EC2를 제공한다.
 
 1. General Purpose
@@ -55,7 +58,6 @@ last_modified_at: 2021-07-18
 - 분산 파일 저장 시스템, 데이터 웨어하우싱 애플리케이션, 고성능 OLTP(Online Transaction Proccessing) 시스템에 활용된다.
 
 > ## EC2 가격
-
 
 1. On-demand
 - 고객이 사용한 기간만큼 비용이 청구된다.
