--- a/_posts/AWS/2021-07-19-ec2-scaling.md
+++ b/_posts/AWS/2021-07-19-ec2-scaling.md
@@ -4,7 +4,7 @@ title:  "[AWS] EC2 스케일링 (Auto Scaling Group, Elastic Load Balancing)"
 categories:
   - AWS
 tags:
-  - [EC2, Auto Scaling Group, Elastic Load Balancing, Application Load Balancer, Network Load Balancer]
+  - [AWS EC2, Auto Scaling Group, Elastic Load Balancing, AWS Elastic Load Balancing]
 
 toc: true
 toc_sticky: true
