refactor: Modify RI vs Saving Plans

--- a/_posts/Cloud/AWS/2021-07-18-about-ec2.md
+++ b/_posts/Cloud/AWS/2021-07-18-about-ec2.md
@@ -1,5 +1,5 @@
 ---
-title:  "[AWS] EC2(Elastic Compute Cloud) 이해하기"
+title:  "[AWS] EC2 이해하기"
 
 categories:
   - AWS
@@ -10,7 +10,7 @@ toc: true
 toc_sticky: true
 
 date: 2021-07-18
-last_modified_at: 2021-07-18
+last_modified_at: 2022-02-05
 ---
 
 
@@ -65,8 +65,10 @@ last_modified_at: 2021-07-18
 
 2. Savings Plans
 - 1년 또는 3년의 약정 기간을 정하는 대신에 On-demand 대비 낮은 가격으로 EC2를 사용할 수 있다.
+- 시간당 EC2의 사용률을 예상하고 금액을 정하고 기간을 약정하는 방식이다. ex.) 10$/hour로 1년 약정
 
 3. Reserved Instances
+- EC2의 종류와 개수를 정하고 약정하는 방식이다.
 - Savings Plans와 비슷하지만 EC2를 종료한다거나 Region을 변경하는 것과 같은 작업이 일어나면 On-demand 방식으로 자동으로 변경된다.
 - [참고 자료](https://www.cloudhealthtech.com/blog/reserved-instances-vs-aws-saving-plans)
 
