refactor: Modify tags

--- a/_posts/Cloud/AWS/2021-07-19-ec2-scaling.md
+++ b/_posts/Cloud/AWS/2021-07-19-ec2-scaling.md
@@ -4,7 +4,7 @@ title:  "[AWS] EC2 스케일링"
 categories:
   - AWS
 tags:
-  - [AWS EC2, Auto Scaling Group, Elastic Load Balancing, AWS Elastic Load Balancing]
+  - [EC2, Auto Scaling Group, Elastic Load Balancing, ELB, ALB, NLB]
 
 toc: true
 toc_sticky: true
