feat: Complete Storage

--- a/_posts/Cloud/AWS/2022-02-13-storage.md
+++ b/_posts/Cloud/AWS/2022-02-13-storage.md
@@ -1,10 +1,10 @@
 ---
-title:  "[AWS] 스토리지 및 데이터베이스"
+title:  "[AWS] 스토리지 서비스 이해하기"
 
 categories:
   - AWS
 tags:
-  - []
+  - [Storage, Databse, EBS, S3, EFS, RDS, DynamoDB, Redshift]
 
 toc: true
 toc_sticky: true
@@ -25,13 +25,106 @@ last_modified_at: 2022-02-13
 
 ### 개념
 
-&nbsp;Amazon Elastic Block Store (Amazon EBS)는 Block 수준의 저장소다. Block 수준이라는 것은 Disk나 Memory와 같은 하드웨어의 한 섹터에 저장되는 것을 의미한다. 그래서 EC2에 EBS를 마운트하면 EC2 내부에서는 스토리지 볼륨으로 표시된다. 
+&nbsp;<b>Amazon Elastic Block Store (Amazon EBS)</b>는 Block 수준의 저장소다. Block 수준이라는 것은 Disk나 Memory와 같은 하드웨어의 한 섹터에 저장되는 것을 의미한다. 그래서 EC2에 EBS를 마운트하면 EC2 내부에서는 스토리지 볼륨으로 표시된다. 
 
 ### 특징
 
-1. 데이터를 장기적으로 저장이 가능하다. EC2를 종료(terminate)하면 EC2에 있는 데이터는 삭제되지만, EBS에 있는 데이터는 삭제되지 않는다.
+-  데이터를 장기적으로 저장이 가능하다. EC2를 종료(terminate)하면 EC2에 있는 데이터는 삭제되지만, EBS에 있는 데이터는 삭제되지 않는다.
 
-2. EBS의 스냅샷을 생성하여 특정 시점의 데이터를 영구적으로 저장할 수 있다. 즉, 백업이 가능하다는 것과 같다.
+-  EBS의 스냅샷을 생성하여 특정 시점의 데이터를 영구적으로 저장할 수 있다. 즉, 백업이 가능하다는 것과 같다.
 
+- 데이터를 자주 써야하거나 수정해야 할 때, S3나 RDS보다 효율적으로 데이터를 관리할 수 있다.
+
+---
 
 > ## Amazon S3
+
+### 개념
+
+&nbsp;<b>Amazon Simple Storage Service (Amazon S3)</b>는 Object 수준의 저장소다. 즉, S3에 데이터를 저장할 때는 음성, 영샹, 텍스트, 메타 데이터 모두 객체로 저장된다. 객체가 저장되는 곳을 Bucket이라 한다.
+
+### 특징
+
+- S3는 최대 5TB까지 저장이 가능하며, 저장할 수 있는 파일 수의 제한은 없다.
+
+- HTTP(S) 프로토콜을 지원하기 때문에, 웹으로 접근할 수 있다.
+
+- 버킷 정책, Access control list (ACL), Cross-origin resource sharing (CORS)를 설정하여 객체들에 대한 보안을 강화할 수 있다.
+
+- 버전 관리가 가능하기 때문에, 실수로 데이터를 삭제해도 복원이 가능하다.
+
+- EC2와 같은 서버 없이, 저장소로 사용할 수 있다. 즉, Serverless 형태다.
+
+### 종류
+
+&nbsp;S3는 여러 형태가 있다. 고객이 데이터를 얼마나 많이 검색하는지, 얼마나 자주 사용하는지에 따라서 적절한 형태를 선택해서 사용해야 효율적으로 S3를 사용할 수 있다.
+
+<b>1. S3 Standard</b>
+- 범용적인 형태로, 자주 접근하는 데이터가 있다면 사용하기 적합한 형태다. 웹 사이트를 위해 HTML파일을 저장하기 위해 사용하거나, CDN으로써 사용할 수도 있다.
+
+<b>2. S3 Standard-Infrequent Access (S3 Standard-IA)</b>
+- 객체에 자주 접근하지 않지만, 접근할 땐 빨라야할 때 적합한 형태다. 데이터를 저장하는 비용은 S3 Standard보다 저렴하지만, 접근할 때는 비싸다.
+
+<b>3. S3 One Zone-Infrequent Access (S3 One Zone-IA)</b>
+- S3 Standard-IA와 사용해야 하는 상황은 동일하다. 하지만, S3 One Zone-IA는 하나의 가용 영역에만 객체를 저장한다. 그래서 S3 Standard-IA에 비해 저렴하다.
+
+<b>4. S3 Intelligent-Tiering</b>
+- 객체에 접근하는 빈도를 예측할 수 없을 때 사용이 가능한 형태다. 만약 객체가 30일동안 접근 되지 않았다면, S3 Intelligent-Tiering이 자동으로 IA로 변경한다. 반대로, 접근이 지속적으로 된다면, Standard 형태로 변경한다.
+
+<b>5. S3 Glacier</b>
+- Data Archive 형태로 사용할 때 적합하다. 즉, 대량의 데이터를 오랫동안 보관하기 위한 용도로 사용할 수 있다. 대신에, 데이터를 검색하는 시간은 매우 길다.
+
+<b>6. S3 Glacier Deep Archive</b>
+- S3 Glacier와 사용해야 하는 상황은 동일하다. 하지만, S3 Glacier Deep Archive는 S3 Glacier보다 검색하는 시간이 더욱 길다. 또한, S3 Glacier보다 저렴하다.
+
+---
+
+> ## Amazon EFS
+
+### 개념
+
+&nbsp;<b>Amazon Elastic File System (Amazon EFS)</b>은 AWS에서 제공하는 파일 시스템이다. Amazon EBS와 비슷하지만 차이점이 있다. 
+
+- Amazon EBS는 한 가용 영역에서만 사용이 가능하기 때문에, EC2와 같은 가용 영역에 위치시켜야 한다. 하지만 Amazon EFS는 지역 단위로 생성하기 때문에 EFS를 사용하는 인스턴스와 같은 가용 영역에 위치하지 않아도 된다.
+- EFS의 용량은 사용하는만큼 확장 또는 축소 된다. 즉, 인스턴스를 중단 시키지 않고 용량을 프로비저닝할 수 있다.
+
+---
+
+> ## Amazon RDS
+
+### 개념
+
+&nbsp;<b>Amazon Relational Database Service (Amazon RDS)</b>는 AWS에서 제공하는 관계형 데이터베이스 서비스다. 데이터를 테이블에 저장하고 SQL로 관리해야할 때 적합하다. 대표적인 RDBMS 엔진인 MySQL, PostgreSQL, Oracle, MariaDB를 지원하고, Amazon에서 만든 엔진인 Amazon Aurora도 존재한다.
+
+### 특징
+
+&nbsp; 물론, Amazon EC2에 MySQL과 같은 RDBMS를 직접 설치하여 데이터베이스를 직접 관리할 수 있다. 하지만, RDS를 사용한다면 Amazon이 데이터베이스를 관리해주기 때문에 편리하다는 장점이 있다. Amazon이 관리해주는 것들은 아래와 같다.
+
+- 애플리케이션 확장
+- 고가용성 및 내결함성 (HA & FT)을 보장한다. Master-Slave 형태를 사용하거나, Multi-AZ방법을 사용할 수 있다.
+- OS와 DB 백업, 패치
+
+---
+
+> ## Amazon DynamoDB
+
+### 개념
+
+&nbsp; <b>Amazon DyanoDB</b>는 AWS에서 제공하는 NoSQL 데이터베이스다. 즉, 대량의 데이터가 유연한 스키마로 관리되야 할 때 적합한 저장소다.
+
+### 특징
+
+- Serverless 형태다.
+- NoSQL 데이터베이스이기 때문에, NoSQL이 가지는 장점을 모두 포함한다.
+- NoSQL의 종류 중, Key-Value 데이터베이스에 해당한다. 데이터는 item과 attribute라는 개념을 이용하여 테이블 형태로 저장한다.
+- 테이블을 한 지역안  여러 가용 영역에 복제함으로써 고가용성과 내구성을 보장한다.
+- Amazon DynamoDB에 접근하는 트래픽의 양에 따라 자동으로 스케일링 된다.
+- On-demand 백업과 Point-in-Time 복구가 가능하여, 실수로 데이터를 삭제해도 복원이 가능하다.
+
+---
+
+> ## Amazon Redshift
+
+### 개념
+
+&nbsp; <b>Amazon Redshift</b>는 AWS에서 제공하는 데이터 웨어하우스 서비스다. 즉, 빅데이터를 위한 서비스이기 때문에, Redshift는 한 cluster안에 여러 개의 node를 놓고, node에서 자원들을 관리한다. cluster 하나에 최소 한 개 이상의 데이터베이스와 엔진이 있다.
