--- a/_posts/Cloud/AWS/2021-07-18-about-aws.md
+++ b/_posts/Cloud/AWS/2021-07-18-about-aws.md
@@ -1,10 +1,10 @@
 ---
-title:  "[AWS] Amazon Web Service와 Cloud에 대하여"
+title:  "[AWS] Cloud와 AWS에 대하여"
 
 categories:
   - AWS
 tags:
-  - [Cloud]
+  - [Cloud, AWS]
 
 toc: true
 toc_sticky: true
