--- a/_posts/Cloud/AWS-Arch/2022-03-02-intra-web.md
+++ b/_posts/Cloud/AWS-Arch/2022-03-02-intra-web.md
@@ -4,7 +4,7 @@ title: "[AWS] 고성능 시스템 아키텍처 Part 1"
 categories:
   - AWS Architecture
 tags:
-  - [AWS Architecture]
+  - [AWS Architecture, Auto Scaling Group, ElastiCache, Aurora]
 
 toc: true
 toc_sticky: true
