refactor: Modify directory tree

--- a/_posts/Cloud/AWS Tips/2021-07-19-ec2-scaling.md
+++ b/_posts/Cloud/AWS Tips/2021-07-19-ec2-scaling.md
@@ -2,7 +2,7 @@
 title:  "[AWS] EC2 스케일링"
 
 categories:
-  - AWS
+  - AWS Tips
 tags:
   - [EC2, Auto Scaling Group, Elastic Load Balancing, ELB, ALB, NLB]
 
