--- a/_posts/Cloud/AWS Tips/2022-02-13-storage.md
+++ b/_posts/Cloud/AWS Tips/2022-02-13-storage.md
@@ -1,8 +1,8 @@
 ---
-title:  "[AWS] 스토리지 서비스 이해하기"
+title:  "[AWS] AWS에서 제공하는 스토리지 서비스"
 
 categories:
-  - AWS
+  - AWS Tips
 tags:
   - [Storage, Databse, EBS, S3, EFS, RDS, DynamoDB, Redshift]
 
