--- a/_posts/Cloud/AWS Tips/2022-02-27-security.md
+++ b/_posts/Cloud/AWS Tips/2022-02-27-security.md
@@ -1,8 +1,8 @@
 ---
-title:  "[AWS] 보안 서비스 이해하기"
+title:  "[AWS] AWS에서 자주 사용하는 보안 서비스"
 
 categories:
-  - AWS
+  - AWS Tips
 tags:
   - [KMS, WAF, Shield, GuardDuty]
 
