--- a/_posts/Cloud/AWS Service/2022-03-19-S3.md
+++ b/_posts/Cloud/AWS Service/2022-03-19-S3.md
@@ -15,11 +15,11 @@ last_modified_at: 2022-03-19
 
 > ## 개념
 
-&nbsp; Amazon S3는 Amazon에서 제공하는 대표적인 스토리지 서비스다. 뛰어난 내구성과 가용성을 가졌으며, 다양한 비즈니스 솔루션으로 활용이 가능하다.
+&nbsp; Amazon S3는 Amazon에서 제공하는 대표적인 스토리지 서비스다. 뛰어난 내구성과 가용성을 가졌으며 다양한 용도로 활용이 가능하다.
 
 > ## 관련 용어
 
-### 1. 버킷 (Bucekt)
+### 1. 버킷 (Bucket)
 
 &nbsp; 버킷이란, 데이터를 저장하는 저장소를 의미한다. 아래와 같은 특징이 있다.
 
@@ -31,6 +31,7 @@ last_modified_at: 2022-03-19
 
 &nbsp; 객체란, 버킷에 저장되는 기본 개체를 의미한다. 아래와 같은 특징이 있다.
 
+- 객체의 최대 크기는 5TB다.
 - 음성, 비디오, 텍스트 등 모든 데이터는 버킷에 저장될 때 객체로 구성되며, 메타데이터와 함께 저장된다.
 - S3는 Key-Value 형식으로 저장된다. Key는 객체의 이름이고 Value는 객체의 내용이다.
 - 각 개체마다 고유한 URL을 가지고 있다. (https://"버킷 이름".s3."region 코드".amazonaws.com/"객체 이름")
@@ -94,7 +95,7 @@ last_modified_at: 2022-03-19
 
 ### 멀티파트 업로드
 
-&nbsp; 버킷에 업로드할 수 있는 객체의 최대 크기는 5TB다. 만약 업로드하는 객체의 크기가 100MB가 넘어가면 멀티파트 업로드를 사용하는 것을 AWS에서 권장한다. 멀티파트 업로드를 사용하면 객체를 여러 파트로 나눈 후, 독립적으로 업로드가 진행된다. 모든 파트가 업로드 되면 S3가 수집하여 하나의 객체로 만든다.
+&nbsp; 만약 업로드하는 객체의 크기가 100MB가 넘어가면 멀티파트 업로드를 사용하는 것을 AWS에서 권장한다. 멀티파트 업로드를 사용하면 객체를 여러 파트로 나눈 후, 독립적으로 업로드가 진행된다. 모든 파트가 업로드 되면 S3가 수집하여 하나의 객체로 만든다.
 <br><br>
 다음과 같은 상황에 멀티파트 업로드를 사용하는 것이 좋다.
 - 안정적이고 높은 대역폭 네트워크가 있을 때, 멀티파트 업로드를 사용하면 멀티 스레드 성능을 사용하여 고성능 네트워크 활용을 극대화할 수 있다.
