--- a/_posts/Cloud/AWS Service/2022-03-19-S3.md
+++ b/_posts/Cloud/AWS Service/2022-03-19-S3.md
@@ -34,7 +34,7 @@ last_modified_at: 2022-03-19
 - 객체의 최대 크기는 5TB다.
 - 음성, 비디오, 텍스트 등 모든 데이터는 버킷에 저장될 때 객체로 구성되며, 메타데이터와 함께 저장된다.
 - S3는 Key-Value 형식으로 저장된다. Key는 객체의 이름이고 Value는 객체의 내용이다.
-- 각 개체마다 고유한 URL을 가지고 있다. (https://"버킷 이름".s3."region 코드".amazonaws.com/"객체 이름")
+- 각 개체마다 고유한 URL을 가지고 있다. (https://버킷이름.s3.지역코드.amazonaws.com/"객체 이름")
 
 ### 3. 액세스 제어 목록 (ACL)
 
