feat: Add S3 web hosting

--- a/_posts/Cloud/AWS Service/2022-03-19-S3.md
+++ b/_posts/Cloud/AWS Service/2022-03-19-S3.md
@@ -110,6 +110,16 @@ last_modified_at: 2022-03-19
 
 ※ 참고자료 : [Amazon S3 Path Deprecation Plan - The Rest of the Story](https://aws.amazon.com/ko/blogs/aws/amazon-s3-path-deprecation-plan-the-rest-of-the-story/)
 
+### 정적 웹 사이트 호스팅
+
+&nbsp; 버킷을 사용하여 정적 웹 사이트를 호스팅할 수 있다. 정적 콘텐츠만 사용이 가능하며, PHP나 JSP와 같이 스크립트 파일을 지원하지 않는다.
+<br><br>
+웹 사이트 엔드 포인트는 다음 두 형식 중 하나를 따른다.
+- 대시 리전(-) : http://버킷이름.s3-website-지역코드.amazonaws.com
+- 점 리전(.) : http://버킷이름.s3-website.지역코드.amazonaws.com
+
+※ 웹 사이트 엔드 포인트는 HTTPS를 지원하지 않는다. 만약 보안이 필요하다면, CloudFront를 통해서 정적 웹 사이트를 제공해야 한다.
+
 > ## 종류
 
 &nbsp; Amazon은 사용 용도에 따라 여러가지 종류를 제공하지만, 주로 사용하는 S3는 4가지가 있다.
