feat: Add RDS info

--- a/_posts/Cloud/AWS Service/2022-04-02-RDS.md
+++ b/_posts/Cloud/AWS Service/2022-04-02-RDS.md
@@ -34,6 +34,8 @@ last_modified_at: 2022-04-02
 
 &nbsp; RDS는 원본 DB 인스턴스를 특정 가용 영역에 배포한 후에 대기 DB 인스턴스를 다른 가용 영역에 추가 배치할 수 있다. 이 때, 대기 DB 인스턴스를 몇 개 배포하는지에 따라 구분한다.
 
+- 다중 AZ 구성은 내결함성을 목표로 한다.
+
 ### 다중 AZ DB 인스턴스 배포
 
 ![image](https://user-images.githubusercontent.com/49023663/161377256-9e2aabab-1b73-4bc0-a1d8-d3e2ecc1fe00.png)
@@ -57,10 +59,12 @@ last_modified_at: 2022-04-02
 
 ![image](https://user-images.githubusercontent.com/49023663/161375122-76013826-9cc7-42b5-8a1f-a7ff12b54062.png)
 
-- 원본 DB와 읽기 전용 복제본은 비동기식으로 복제된다.
-- 읽기를 다른 작업들과 분리할 수 있기 때문에 DB에 대한 부하를 줄여서 네트워크 지연 시간을 줄일 수 있다.
+- 읽기 전용 복제본은 비동기식으로 복제된다.
+- 읽기 전용 복제본 설정은 확장성을 목표로 한다.
+- 읽기를 다른 작업들과 분리할 수 있기 때문에 DB에 대한 부하를 줄여서 네트워크 지연 시간을 줄일 수 있다는 장점이 있다.
 - 기본적으로 복제본은 원본과 다른 가용 영역에 있지만, 경우에 따라 다른 리전에 생성할 수도 있다.
-- 원본 DB가 있는 가용 영역에 장애가 생기거나, 원본 DB에 DDL 작업으로 인한 성능 저하와 같은 이유로 인해 읽기 전용 복제본을 원본 DB와 같은 레벨로 승격할 수 있다.
+- 원본 DB가 있는 가용 영역에 장애가 생기거나, 원본 DB에 DDL 작업으로 인한 성능 저하와 같은 이유로 인해 읽기 전용 복제본을 원본 DB와 같은 레벨(마스터 레벨)로 승격할 수 있다.
+- 수동으로 마스터 DB로 승격시킬 수 있어서 내결함성을 지원하지만, 재해 복구 솔루션이 되지는 못한다.
 - 최대 5개까지 복제본을 생성할 수 있다.
 
 > ## Amazon Aurora
