feat: Add placement group

--- a/_posts/Cloud/AWS Service/2021-07-18-EC2.md
+++ b/_posts/Cloud/AWS Service/2021-07-18-EC2.md
@@ -15,25 +15,19 @@ last_modified_at: 2022-02-05
 
 
 
-> ## AWS EC2?
+> ## 개념
 
-&nbsp;Amazon Elastic Compute Cloud(Amazon EC2)는 AWS에서 제공하는 가상의 서버 컴퓨터다.
-- On-premise 환경에서의 서버 컴퓨터와 역할이 같다.
+&nbsp; Amazon Elastic Compute Cloud(Amazon EC2)는 AWS에서 제공하는 가상의 컴퓨터다. 웹 서버, 스토리지 등 사용자가 원하는 방식으로 사용이 가능하다.
+
+> ## 특징
+
 - AWS는 EC2를 Host Machine에 Hypervisor로 가상화 하여 Multitenancy 환경으로 관리한다.
-- Cloud Service의 형태 중 IaaS에 해당하며 CaaS(Compute as a Service)에 해당 되기도 한다.
-- 사용자는 CPU, Memory, OS, Storage와 같은 것들을 직접 선택하여 사용할 수 있다.
+- EC2 하나에 최대 27개의 EBS를 연결할 수 있다.
+- EC2는 'pay-as-you-go' 서비스를 제공하기 때문에 On-premise 환경과 달리 증설해야 할 서버의 개수를 예측할 필요가 없다. 즉, 효율적으로 scale in/out을 할 수 있다.
+- 여러 OS에 호환되고 데이터베이스 또는 Third Party 소프트웨어도 사용이 가능하다.
+- 사용자들은 사용 목적에 맞는 EC2의 종류와 가격 측정 옵션을 선택할 수 있다.
 
-> ## EC2 특징
-
-1. On-premise 환경에서 서버를 증설 해야 한다면 컴퓨터를 필요한 만큼 주문하고 도착할 때까지 기다린 후에 설치까지 완료해야 사용이 가능하다. 하지만 EC2는 클릭 몇번으로 바로 사용이 가능하다.
-
-2. EC2는 'pay-as-you-go' 서비스를 제공하기 때문에 On-premise 환경과 달리 증설해야 할 서버의 개수를 예측할 필요가 없다. 즉, 효율적으로 scale in/out을 할 수 있다.
-
-3. 여러 OS에 호환되고 데이터베이스 또는 Third Party 소프트웨어도 사용이 가능하다.
-
-4. 사용자들은 EC2를 다양한 목적을 가지고 활용한다. 그래서 AWS는 사용하는 목적에 맞는 EC2의 종류와 가격 측정 옵션을 제공한다.
-
-> ## EC2 종류
+> ## 종류
 
 사용자는 EC2를 다양한 목적으로 사용할 수 있기 때문에 AWS는 여러 종류의 EC2를 제공한다.
 
@@ -57,7 +51,7 @@ last_modified_at: 2022-02-05
 - 많은 양의 데이터가 저장되어 있는 스토리지에서 IO가 많을 때 적합한 컴퓨터다.
 - 분산 파일 저장 시스템, 데이터 웨어하우싱 애플리케이션, 고성능 OLTP(Online Transaction Proccessing) 시스템에 활용된다.
 
-> ## EC2 가격
+> ## 가격 측정 옵션
 
 1. On-demand
 - 고객이 사용한 기간만큼 비용이 청구된다.
@@ -78,3 +72,43 @@ last_modified_at: 2022-02-05
 
 5. Dedicated Hosts
 - 가상으로 빌리는 것이 아니라 물리적인 서버 컴퓨터를 직접 빌려서 사용할 때 측정 되는 방식이다. 그렇기 때문에 가장 높은 가격의 비용이 청구 된다.
+
+> ## 배치 그룹
+
+&nbsp; 여러 개의 EC2 인스턴스를 생성하고 배치할 때, 배치하는 방법을 정하기 위해 사용하는 서비스다. 상호 간의 오류와 같은 위험성을 줄이기 위해서 사용되며, 총 3가지 방법을 제공한다.
+
+### 1. 클러스터 배치 그룹
+
+&nbsp; 하나의 가용 영역 내에 EC2를 배치하는 방법이다.
+
+<br>
+이 방식을 사용하는 경우 다음과 같다.
+- 짧은 네트워크 지연 시간이 필요할 때
+- 높은 네트워크 처리량이 필요할 때
+- 대부분의 네트워크 트래픽이 EC2 사이에서 일어날 때
+
+![image](https://user-images.githubusercontent.com/49023663/162223977-d4a29e50-f449-4935-92fe-68463e3a7934.png)
+
+
+### 2. 파티션 배치 그룹
+
+&nbsp; EC2 인스턴스를 파티션으로 논리적으로 나누어서 배치하는 방식이다. 동일한 리전 내에서 여러 가용 영역에 파티션을 배치할 수 있다. 하지만 다른 리전은 불가능하다.
+
+<br>
+이 방식을 사용하는 경우는 다음과 같다.
+- 애플리케이션 단위로 파티션을 나누고 관리가 필요할 때
+- 애플리케이션 내에 일어나는 장애를 전체 시스템에 영향 주지 않고 싶을 때
+- 대규모 분산 시스템을 사용하고 싶을 때 (HDFS, Cassandra 등)
+
+![image](https://user-images.githubusercontent.com/49023663/162224043-d9ece6a8-1593-454d-b910-06e3581569d7.png)
+
+### 3. 분산 배치 그룹
+
+&nbsp; 한 렉에 하나의 EC2 인스턴스를 배치하는 방식이다. 즉, AWS 데이터 센터의 한 렉에서 오직 하나의 가상화된 EC2만 사용한다. 동일한 리전 내에서 여러 가용 영역에 적용할 수 있으며, 가용 영역 별로 최대 7개의 인스턴스를 실행할 수 있다.
+
+<br>
+이 방식을 사용하는 경우는 다음과 같다.
+- 인스턴스 각각이 서로 떨어져 있어야 할 때
+- 분산 시스템을 사용하고 싶지만 EC2의 개수가 적을 때
+
+![image](https://user-images.githubusercontent.com/49023663/162224072-20dd2d6d-a393-4ff3-888f-73808e08b5e0.png)
