feat: Add RDS max volume size

--- a/_posts/Cloud/AWS Service/2022-04-02-RDS.md
+++ b/_posts/Cloud/AWS Service/2022-04-02-RDS.md
@@ -20,6 +20,7 @@ last_modified_at: 2022-04-02
 > ## 특징
 
 - 사용자는 최대 40개의 DB 인스턴스를 생성할 수 있다.
+- RDS 볼륨의 최대 크기는 16TB다.
 - EC2처럼 DB의 성능을 결정할 수 있는 DB 인스턴스 클래스를 정할 수 있다.
 - 지원하는 RDBMS의 종류는 Oracle, MariaDB, MS-SQL, MySQL, PostgreSQL이 있다.
 
