--- a/_posts/Cloud/AWS Service/2021-07-18-EC2.md
+++ b/_posts/Cloud/AWS Service/2021-07-18-EC2.md
@@ -82,6 +82,11 @@ last_modified_at: 2022-02-05
 &nbsp; 하나의 가용 영역 내에 EC2를 배치하는 방법이다.
 
 <br>
+특징은 다음과 같다.
+- 그룹의 모든 인스턴스는 같은 가용 영역에 있어야 한다.
+- 그룹의 인스턴스는 서로 통신할 때 네트워크 지연 시간이 낮아진다.
+
+<br>
 이 방식을 사용하는 경우 다음과 같다.
 - 짧은 네트워크 지연 시간이 필요할 때
 - 높은 네트워크 처리량이 필요할 때
@@ -92,7 +97,12 @@ last_modified_at: 2022-02-05
 
 ### 2. 파티션 배치 그룹
 
-&nbsp; EC2 인스턴스를 파티션으로 논리적으로 나누어서 배치하는 방식이다. 동일한 리전 내에서 여러 가용 영역에 파티션을 배치할 수 있다. 하지만 다른 리전은 불가능하다.
+&nbsp; EC2 인스턴스를 파티션으로 논리적으로 나누어서 배치하는 방식이다.
+
+<br>
+특징은 다음과 같다.
+- 동일한 리전 내에서 여러 가용 영역에 파티션을 배치할 수 있다.
+- 다른 리전에 파티션을 배치할 수 없다.
 
 <br>
 이 방식을 사용하는 경우는 다음과 같다.
@@ -104,7 +114,13 @@ last_modified_at: 2022-02-05
 
 ### 3. 분산 배치 그룹
 
-&nbsp; 한 렉에 하나의 EC2 인스턴스를 배치하는 방식이다. 즉, AWS 데이터 센터의 한 렉에서 오직 하나의 가상화된 EC2만 사용한다. 동일한 리전 내에서 여러 가용 영역에 적용할 수 있으며, 가용 영역 별로 최대 7개의 인스턴스를 실행할 수 있다.
+&nbsp; 한 렉에 하나의 EC2 인스턴스를 배치하는 방식이다. 즉, AWS 데이터 센터의 한 렉에서 오직 하나의 가상화된 EC2만 사용한다.
+
+<br>
+특징은 다음과 같다.
+- 그룹의 모든 인스턴스는 낮은 네트워크 지연 시간으로 서로 통신한다.
+- 동일한 리전 내에 여러 가용 영역에 둘 수 있다.
+- 그룹 내에 여러 가용 영역에서 최대 7개의 인스턴스를 둘 수 있다.
 
 <br>
 이 방식을 사용하는 경우는 다음과 같다.
