refactor: Modify EBS

--- a/_posts/Cloud/AWS Service/2022-04-10-EBS.md
+++ b/_posts/Cloud/AWS Service/2022-04-10-EBS.md
@@ -20,7 +20,7 @@ last_modified_at: 2022-04-10
 > ## 특징
 
 - EBS 볼륨은 특정 가용 영역에 생성할 수 있으며, 같은 가용 영역에 있는 EC2 인스턴스에 부착할 수 있다.
-- 볼륨의 최대 크기는 16TB다.
+- 볼륨의 최대 크기는 16TB다. (Magnetic 유형은 1TB)
 - KMS를 통한 암호화를 하여 EBS 볼륨을 생성할 수 있다.
 
 > ## 종류
@@ -73,7 +73,12 @@ last_modified_at: 2022-04-10
 
 ### 5. 마그네틱
 
-&nbsp; 마그네틱(Magnetic)은 자기 디스크로 콜드 HDD와 처리량에 최적화된 HDD처럼 자기 디스크며, Amazon에서 예전에 지원하던 형태다. 즉, 성능 및 비용 측면에서 사용할 이유가 없다.
+&nbsp; 마그네틱(Magnetic)은 자기 디스크로 콜드 HDD와 처리량에 최적화된 HDD처럼 자기 디스크며, Amazon에서 예전에 지원하던 형태다.
+
+<br>
+특징은 다음과 같다.
+- 부팅 볼륨으로 사용이 가능하다.
+- 최대 크기는 1TB다.
 
 > ## 백업
 
